litellm/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: litellm-deployment
  labels:
    app: litellm
spec:
  selector:
    matchLabels:
      app: litellm
  template:
    metadata:
      labels:
        app: litellm
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - las211.tokyotech.org
              weight: 1
      containers:
        - name: litellm
          image: ghcr.io/berriai/litellm:v1.94.0
          ports:
            - containerPort: 4000
          resources:
            requests:
              cpu: "10m"
              memory: "768Mi"
            limits:
              cpu: "200m"
              memory: "1Gi"
          volumeMounts:
            - name: config-volume
              mountPath: /app/config.yaml
              subPath: config.yaml
          args:
            - "--config"
            - "/app/config.yaml"
      volumes:
        - name: config-volume
          configMap:
            name: litellm-config-file
