litellm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: litellm

spec:
  type: ClusterIP
  selector:
    app: litellm
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
