litellm/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: litellm

spec:
  entryPoints:
    - websecure
  tls:
    secretName: litellm-tls
  routes:
    - kind: Rule
      match: Host(`llm-proxy.trap.jp`)
      services:
        - namespace: litellm
          kind: Service
          name: litellm
          port: 80
          scheme: http
          weight: 1
